--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://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@github.com/daniel117622/CinePlus.git"
+    "url": ""
   },
   "author": "daniel, carlos, adrian",
   "license": "ISC",
