--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.19",
     "pug": "^3.0.2"
   }
