--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "mongodb": "^4.10.0",
     "nodemon": "^2.0.19",
     "pug": "^3.0.2"
   }
