--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "bootstrap-icons": "^1.9.1",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
