--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongodb": "^4.10.0",
-    "nodemon": "^2.0.19",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
