--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongodb": "^4.10.0",
     "pug": "^3.0.2"
   },
